Port OAuth client_credentials tests to the IHTTPAuthenticationProvider model
- Add ServerDetailsPOJOHTTPAuthProviderTest covering the client_credentials
  Bearer header and the invalidateTokenIfClientCredentials capability.
- Rewrite ManagedWebAccessAuthTests and OAuthClientCredentialsIntegrationTest
  to construct accessors with ServerDetailsPOJOHTTPAuthProvider instead of the
  removed internal-auth constructors / withClientCredentials API, preserving
  the full-flow, caching, refresh, 401/403 retry, addServerAuthDetail and
  SimpleHTTPClient-path coverage.
- testTokenEndpointFailure now expects the FHIRException that wraps the token
  IOException (getHeaders cannot throw checked exceptions under the provider
  model) and asserts no FHIR request was made.
- Fix ManagedWebAccessUtilsTests to build ServerDetailsPOJO via the Lombok
  builder instead of the outdated all-args constructor.